CrOS FilesApp unmount with cros-disks when crostini sshfs container shutdown

In addition to removing the crostini volume with VolumeManager, also
call DiskMountManager::UnmountPath.

Bug: 859238
Change-Id: I0b773896ed3048f0bc3c62dcb4835aa547438475
Reviewed-on: https://chromium-review.googlesource.com/1137967
Reviewed-by: Sam McNally <sammc@chromium.org>
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575213}
Former-commit-id: 92f7748fe20707f1e263ea047302ed1fd50f5a7a